0026755: Use of reference to destroyed temporary object in Adaptor3d_SurfaceOfRevolution

Code corrected to make a copy of temporary object for its further use